--- a/css/styles.css
+++ b/css/styles.css
@@ -32,9 +32,7 @@ body {
 
 .logo {
     font-family: 'Raleway', sans-serif;
-    font-family: Raleway;
-    font-style: normal;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 26px;
     line-height: 1, 19;
 }
