--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,7 @@
             color: #ffffff;
         }
         
-        footer {
+        .footer {
             background-color: #2F303A;
         }
         
@@ -202,4 +202,11 @@
             color: #ffffff;
             box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
             border-radius: 4px;
+        }
+        
+        .address:focus,
+        .bottom-contacts:focus,
+        .address:hover,
+        .bottom-contacts:hover {
+            color: var(--acent-color);
         }
