--- a/css/styles.css
+++ b/css/styles.css
@@ -78,16 +78,18 @@
         .hero-h1 {
             font-weight: 900;
             font-size: 44px;
-            line-height: 1.36 text-align: center;
+            line-height: 1.36;
+            text-align: center;
             letter-spacing: 0.06em;
             text-transform: uppercase;
             color: #ffffff;
         }
         
         .hero-button {
-            background: #2196F3;
+            background: var(--second-color);
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-            border-radius: 4px font-family: Roboto;
+            border-radius: 4px;
+            font-family: Roboto;
             font-weight: 700;
             font-size: 16px;
             line-height: 1.87;
