Fixed hero button color!

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@
         }
         
         .hero-button {
-            background: var(--second-color);
+            background: var(--acent-color);
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
             border-radius: 4px;
             font-family: Roboto;
